# FarNorthEngine

./: .gitignore  CMakeLists.txt  build.bat  build_game_dll.bat  build_release.bat  build_win64.bat  debug.bat  run.bat
data/: test.out
data/models/: DropPod_Crashed.glb
data/shaders/: fn_postprocess_fragment_shader.frag  fn_postprocess_vertex_shader.vert  fn_skybox_fragment_shader.frag  fn_skybox_vertex_shader.vert  fn_standard_fragment_shader.frag  fn_standard_vertex_shader.vert  test_vertex_shader.vert
dependencies/assimp/lib/: assimp-vc142-mtd.exp  assimp-vc142-mtd.ilk
res/: test.out
src/common/: fn_common.h
src/engine/renderer/opengl/: opengl_renderer.h
src/game/: fn_asset.cpp  fn_asset.h  fn_assets.cpp  fn_entity.cpp  fn_game.cpp  fn_game.h  fn_game_input.h  fn_memory.cpp  fn_memory.h  fn_renderer.cpp  fn_renderer.h  fn_renderer_opengl.cpp  fn_world.cpp  opengl_renderer.cpp  opengl_renderer.h
src/game/client/: fn_game_client.h
src/math/: fn_math.h
src/platform/: fn_platform.h
src/platform/opengl/: opengl_renderer.cpp
src/platform/win32/: win32_audio.cpp  win32_audio.h  win32_file.cpp  win32_input.cpp  win32_input.h  win32_input_recording.cpp  win32_main.cpp  win32_main.h  win32_net.cpp  win32_opengl.cpp  win32_opengl.h  win32_thread.cpp  win32_time.cpp  win32_window.cpp
src/renderer/opengl/: opengl_renderer.cpp  opengl_renderer.h
